# ohmyfin-python

./: .gitignore  LICENSE  README.md  pyproject.toml
ohmyfin/: __init__.py  client.py
